# MagSymTB

./: README.md  pyproject.toml
examples/KV2Se2O/: paper.KV2Se2O.conf
examples/MoS2/: paper.hopping_parameters.txt
examples/NN_monolayer_MoS2_GGA_soc/: paper.MoS2_60.conf  paper.hopping_parameters.txt
examples/monolayer_MoS2/: MoS2_60.conf  paper.hopping_parameters.txt
examples/monolayer_MoSe2/: paper.MoSe2_60.conf
examples/monolayer_MoTe2/: paper.MoTe2_60.conf
examples/monolayer_WS2/: paper.WS2_60.conf
examples/monolayer_WSe2/: paper.WSe2_60.conf
examples/monolayer_WTe2/: paper.WTe2_60.conf
py_src/magsymtb/: cli.py  general_script.py  init_from_cif.py  run_diagonalization_band_plotting.py  run_plot_band.py
py_src/magsymtb/classes/: class_defs.py
py_src/magsymtb/load_Hk_parameters/: load_Hk_and_hopping.py
py_src/magsymtb/parse_files/: parse_cif.py  parse_conf.py  sanity_check.py
py_src/magsymtb/plot_energy_band/: block_diagonalization.py  load_path_in_Brillouin_zone.py
py_src/magsymtb/symmetry/: complete_orbitals.py  generate_magnetic_space_group_representations.py
